<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efdcd5"
        tools:context=".my_profile">
    <TextView
            android:text="@string/lblPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView13" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13" app:layout_constraintHorizontal_bias="0.208"/>
    <TextView
            android:text="@string/lblTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="116dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/txtAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView11" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.178" app:layout_constraintBaseline_toBaselineOf="@+id/textView11"/>
    <TextView
            android:text="@string/lblSlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" android:layout_marginTop="16dp"
    />
    <TextView
            android:text="@string/txtSlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.119" app:layout_constraintBaseline_toBaselineOf="@+id/textView9"/>
    <TextView
            android:text="@string/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:id="@+id/textView7"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.68" app:layout_constraintBaseline_toBaselineOf="@+id/textView7"/>
    <TextView
            android:text="@string/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <TextView
            android:text="@string/txtDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/lblCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="92dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/txtCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"/>
    <ImageView
            android:layout_width="198dp"
            android:layout_height="167dp" app:srcCompat="@mipmap/mydp_launcher_round"
            android:id="@+id/imageView2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>