<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efdcd5"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="64dp"
            android:id="@+id/textView" app:layout_constraintHorizontal_bias="0.538"/>
    <Button
            android:text="@string/btnAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAbout" app:layout_constraintStart_toStartOf="@+id/btnProfile"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="124dp" app:layout_constraintEnd_toEndOf="@+id/btnProfile"
    />
    <Button
            android:text="@string/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnProfile" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/btnAbout"/>

</androidx.constraintlayout.widget.ConstraintLayout>